[workspace]

members = [
  'contracts/*',
]

repository = "https://github.com/icns-xyz/icns"

[workspace.package]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
cosmwasm-schema = "1.1.2"
cosmwasm-std = "1.1.2"
cw-multi-test = "0.16.0"
cw-storage-plus = "0.13.2"
cw2 = "0.13.2"
cw721 = "0.16.0"
cw721-base = "0.16.0"
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
thiserror = {version = "1.0.31"}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
