[workspace]
members = ["contracts/*"]

[workspace.package]
version    = "0.1.0"
authors    = [
  "mattverse <mattpark1028@gmail.com>",
  "Supanat Potiwarakorn <boss@osmosis.team>",
]
edition    = "2021"
repository = "https://github.com/icns-xyz/icns"

[workspace.dependencies]
anyhow          = "1.0.66"
base64          = "0.13.1"
bech32          = "0.9.1"
cosmrs          = { version = "0.11.0", default-features = false, features = ["bip32"] }
cosmwasm-schema = "1.1.2"
cosmwasm-std    = "1.1.2"
cw2             = "0.16.0"
cw721           = "0.16.0"
cw721-base      = "0.16.0"
cw-multi-test   = "0.16.0"
cw-storage-plus = "0.16.0"
cw-utils        = "0.16.0"
hex-literal     = "0.3.1"
itertools       = "0.10.5"
ripemd          = "0.1.3"
schemars        = "0.8.8"
serde           = { version = "1.0.137", default-features = false, features = ["derive"] }
sha2            = "0.10.6"
sha3            = "0.10.6"
subtle-encoding = { version = "0.5", features = ["bech32-preview"] }
thiserror       = "1.0.31"

[profile.release]
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = true
panic            = "abort"
rpath            = false
