[package]
authors = ["mattverse <mattpark1028@gmail.com>"]
edition = "2021"
name = "icns-default-registrar"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
cosmrs = {version = "0.10.0", default-features = false, features = ["bip32"]}
cosmwasm-schema = "1.1.2"
cosmwasm-std = "1.1.2"
cosmwasm-storage = "1.1.2"
cw-storage-plus = "0.13.2"
cw-utils = "1.0.0"
cw2 = "0.13.2"
icns-name-nft = {path = "../name-nft", features = ["library"]}
icns-resolver = {version = "0.1.0", path = "../resolver", features = ["library"]}
itertools = "0.10.5"
schemars = "0.8.8"
serde = {version = "1.0.137", default-features = false, features = ["derive"]}
sha2 = "0.10.6"
thiserror = {version = "1.0.31"}

[dev-dependencies]
anyhow = "1.0.66"
cw-multi-test = "0.13.2"
cw721 = {workspace = true}
cw721-base = {workspace = true}
