[package]
authors = ["mattverse <mattpark1028@gmail.com>", "Supanat Potiwarakorn <boss@osmosis.team>"]
description = "CosmWasm contract that represents ownership of ICNS name"
edition = "2021"
name = "icns-name-nft"
# repository = {workspace = true}
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
cw721 = {workspace = true}
cw721-base = {workspace = true, features = ["library"]}
schemars = {workspace = true}
serde = {workspace = true}
thiserror.workspace = true

[dev-dependencies]
cw-multi-test = {workspace = true}

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false
