[package]
name        = "icns-registrar"
description = ""
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils        = { workspace = true }
cw2             = { workspace = true }
icns-name-nft   = { path = "../icns-name-nft", features = ["library"] }
itertools       = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sha2            = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
anyhow        = { workspace = true }
cosmrs        = { workspace = true }
cw721         = { workspace = true }
cw721-base    = { workspace = true }
cw-multi-test = { workspace = true }
