[package]
name        = "icns-resolver"
description = ""
version     = { workspace = true }
authors     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
base64          = { workspace = true }
cosmwasm-schema = { workspace = true }
cosmwasm-std    = { workspace = true }
cw2             = { workspace = true }
cw721           = { workspace = true }
cw-storage-plus = { workspace = true }
icns-name-nft   = { path = "../icns-name-nft", features = ["library"] }
ripemd          = { workspace = true }
schemars        = { workspace = true }
serde           = { workspace = true }
sha2            = { workspace = true }
sha3            = { workspace = true }
subtle-encoding = { workspace = true }
thiserror       = { workspace = true }

[dev-dependencies]
bech32        = { workspace = true }
cosmrs        = { workspace = true }
cw721-base    = { workspace = true }
cw-multi-test = { workspace = true }
hex-literal   = { workspace = true }
