[package]
authors = ["Supanat Potiwarakorn <boss@osmosis.team>"]
description = "CosmWasm contract that represents ownership of ICNS name"
edition = {workspace = true}
name = "icns-name-nft"
# repository = {workspace = true}
version = {workspace = true}

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = {workspace = true}
cosmwasm-std = {workspace = true}
cw-storage-plus = {workspace = true}
cw2 = {workspace = true}
cw721 = {workspace = true}
cw721-base = {workspace = true, features = ["library"]}
schemars = {workspace = true}
serde = {workspace = true}

[dev-dependencies]
cw-multi-test = {workspace = true}
