[package]
authors = ["mattverse <mattpark1028@gmail.com>"]
edition = "2021"
name = "icns-resolver"
version = "0.1.0"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = true
panic = 'abort'
rpath = false

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.12.6
"""

[dependencies]
bech32 = "0.9.1"
cosmwasm-crypto = "1.1.3"
cosmwasm-schema = "1.1.3"
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "0.15.1"
cw2 = "0.15.1"
cw721 = {workspace = true}
hex-literal = "0.3.1"
icns-name-nft = {path = "../name-nft", features = ["library"]}
ripemd = "0.1.3"
base64 = "0.13.1"
schemars = "0.8.10"
serde = {version = "1.0.145", default-features = false, features = ["derive"]}
sha2 = "0.10"
subtle-encoding = {version = "0.5", features = ["bech32-preview"]}
thiserror = {version = "1.0.31"}

[dev-dependencies]
cosmrs = "0.11.0"
cw-multi-test = "0.15.1"
cw721-base = {workspace = true, features = ["library"]}
